--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mesto-project-ff",
   "version": "1.0.0",
-  "description": "",
+  "description": "https://github.com/JeniaShal/mesto-project-ff/blob/main/README.md",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "core-js": "^3.36.0",
-    "webpack": "^5.90.3"
+    "core-js": "^3.36.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -24,6 +23,7 @@
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.1",
     "postcss-loader": "^8.1.1",
+    "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
   }
